--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "anthropic>=0.52.0",
+    "atproto>=0.0.61",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
 ]
