--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "openai>=1.82.0",
     "pandas>=2.2.3",
     "python-dotenv>=1.1.0",
+    "pyyaml>=6.0.2",
     "requests>=2.32.3",
     "sqlglot[rs]>=26.22.0",
 ]
